--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
